tests/types/errors/match_redundant_variant.err
1. error[T054]: redundant match arm: duplicate variant `Circle`
  --> tests/types/errors/match_redundant_variant.mochi:11:3

 11 |   Circle(x) => x
    |   ^

help:
  Remove the arm or merge it with the earlier arm it duplicates. Mochi does not have pattern guards, so duplicate patterns can never both fire.
